--- a/setup_jdk_docker_ jenkins.yml
+++ b/setup_jdk_docker_ jenkins.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install Java and Jenkins on Ubuntu
+- name: Install Java, Docker, and Jenkins on Ubuntu
   hosts: jenkins_node
   become: true
 
@@ -13,6 +13,44 @@
         name: openjdk-17-jdk
         state: present
 
+    # ------------------ Docker Installation ------------------
+    - name: Install required packages for Docker
+      apt:
+        name:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - software-properties-common
+        state: present
+
+    - name: Add Docker GPG key
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
+
+    - name: Add Docker repository
+      apt_repository:
+        repo: deb https://download.docker.com/linux/ubuntu focal stable
+        state: present
+        filename: docker
+
+    - name: Update apt cache after adding Docker repo
+      apt:
+        update_cache: yes
+
+    - name: Install Docker
+      apt:
+        name:
+          - docker-ce
+        state: present
+
+    - name: Start and enable Docker
+      systemd:
+        name: docker
+        state: started
+        enabled: yes
+
+    # ------------------ Jenkins Installation ------------------
     - name: Add Jenkins GPG key
       apt_key:
         url: https://pkg.jenkins.io/debian/jenkins.io.key
@@ -38,3 +76,15 @@
         name: jenkins
         state: started
         enabled: yes
+
+    # ------------------ Jenkins + Docker ------------------
+    - name: Add Jenkins user to docker group
+      user:
+        name: jenkins
+        groups: docker
+        append: yes
+
+    - name: Restart Jenkins to apply group changes
+      systemd:
+        name: jenkins
+        state: restarted
