--- a/nodejs_app_code/Jenkinsfile
+++ b/nodejs_app_code/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
         }
         stage('Build Docker Image') {
             steps {
-                sh 'docker build -t $IMAGE_NAME .'
+               sh "docker build -t ${IMAGE_NAME} nodejs_app_code/."
             }
         }
         stage('Run Container') {
