monitoring and docker-compose added

--- a/setup_jdk_docker_ jenkins.yml
+++ b/setup_jdk_docker_ jenkins.yml
@@ -88,3 +88,11 @@
       systemd:
         name: jenkins
         state: restarted
+
+      # ------------------ Docker Compose Installation ------------------
+    - name: Install Docker Compose
+      get_url:
+        url: https://github.com/docker/compose/releases/download/v2.24.4/docker-compose-linux-x86_64
+        dest: /usr/local/bin/docker-compose
+        mode: '0755'
+
