--- a/nodejs_app_code/Jenkinsfile
+++ b/nodejs_app_code/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
     stages {
         stage('Checkout') {
               steps {
-                git branch: 'main', url: 'https://github.com/puja-rathi/HangoutPoint.git'
+                git branch: 'dev', url: 'https://github.com/puja-rathi/HangoutPoint.git'
               }
         }
         stage('Build Docker Image') {
