target added in prometheus.yml

--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -4,4 +4,4 @@ global:
 scrape_configs:
   - job_name: 'nodejs-app'
     static_configs:
-      - targets: ['host.docker.internal:3000']
+      - targets: ['98.84.113.170:3000']
