index.js and jenkinsfile updated with spin up prometheus stage

--- a/nodejs_app_code/Jenkinsfile
+++ b/nodejs_app_code/Jenkinsfile
@@ -20,6 +20,17 @@ pipeline {
                 sh 'sleep 5'
             }
         }
+
+        stage('Start Monitoring Stack') {
+            steps {
+                dir('monitoring') {
+                    sh 'docker-compose up -d'
+                }
+                sh 'sleep 5' // wait for Prometheus and Grafana to start
+            }
+        }
+
+        
         stage('Test') {
             steps {
                 sh 'docker exec test-app npm test'     //test app code
